--- a/resume.html
+++ b/resume.html
@@ -4,12 +4,17 @@
    <head>
       <meta charset="UTF-8"/>
       <title>resume</title>
-   </head>
+      <link href="css/web.css" media="screen" rel="stylesheet" />
+      <link href="css/print.css" media="print" rel="stylesheet" />
+      <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+  </head>
 
    <body>
-
+    <div id="container">
     <header>
-      <h1>Elisa F. Pigna</h1>
+      <img src="img/portrait.jpg" alt="Elisa">
+      <h1>Elisa Francesca Pigna</h1>
     </header>
 
     <main>
@@ -17,143 +22,164 @@
       <section>
         <article>
           <address>
-            1821 West 24th Street<br>
-            Miami Beach, FL 33140<br>
-            e.pigna@umiami.edu<br>
-            (305) 205-2750<br>
+            <p>
+            1821 West 24th Street<br/>
+            Miami Beach, FL 33140<br/>
+            e.pigna@umiami.edu<br/>
+            (305) 205-2750<br/>
+           </p>
          </address>
         </article>
       </section>
 
-<nav>
-  <ul>
-    <li><a href="#jobobjective">Job Objective</a></li>
-    <li><a href="#education">Education</a></li>
-    <li><a href="#accomplishments">Accomplishments</a></li>
-    <li><a href="#skills">Skills</a></li>
-    <li><a href="#interests">Interests</a></li>
-  </ul>
-</nav>
+      <nav>
+        <ul>
+          <li><a href="#jobobjective">Job Objective</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#accomplishments">Accomplishments</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#interests">Interests</a></li>
+        </ul>
+      </nav>
 
-      <section>
-        <h2 id="jobobjective">Job Objective</h2>
-
-        <article>
-          <p>Create advertisements that will expand customer sales, generate brand awareness, and develop new and existing products.</p>
-
-      <section>
-        <h2 id="education">Education</h2>
+    <div id="top-box">
+        <section id="jobobjective">
+          <h2>Job Objective</h2>
 
           <article>
-            <h3><a href="http://miami.edu"> University of Miami</a></h3>
-              <h4>2013-2015</h4>
-              <h4>Advertising Major/Marketing Minor</h4>
-              <h4>Coral Gables, FL</h4>
+            <p>Create advertisements that will expand customer sales, generate brand awareness, and develop new and existing products.</p>
+          </article>
+        </section>
+
+        <section id="education">
+          <h2>Education</h2>
+
+            <article>
+              <h3><a href="http://miami.edu"> University of Miami</a></h3>
+                <p>
+                2013-2015 <br/>
+                Advertising Major/Marketing Minor<br/>
+                Coral Gables, FL <br/>
+               </p>
+            </article>
+
+            <article>
+              <h3><a href="http://mdc.edu">Miami Dade College </a></h3>
+                <p>
+                2010-2012 <br/>
+                Associates Degree <br/>
+                Miami, FL <br/>
+               </p>
+            </article>
+        </section>
+    </div>
+
+    <div id="middle-box">
+        <section id="accomplishments">
+          <h2>Accomplishments</h2>
+
+            <article>
+              <h3><a href="http://socialated.com"> Socialated</a></h3>
+                <p>
+                Social Media Marketing Intern <br/>
+                September 2013- January 2014 <br/>
+                Coconut Grove, FL <br/>
+               </p>
+            </article>
+
+            <article>
+              <ul>
+                <li>Managed three client profiles for social media platforms</li>
+                <li>Recruited two companies to the client database</li>
+                <li>Saved company 10 hours a week and $430 a month by organizing a client profile system with corresponding Dropbox files</li>
+                <li>Created banners and Google Ads for clients</li>
+              </ul>
+           </article>
+
+           <article>
+             <h3><a href="http://denverartmuseum.org">Denver Art Museum </a></h3>
+              <p>
+               Sales Assistant/Buying Assistant <br/>
+               October 2012- March 2013 <br/>
+               Denver, CO <br/>
+             </p>
+         </article>
+
+           <article>
+             <ul>
+               <li>Inventoried exit gift shop for Becoming Van Gogh</li>
+               <li>Visualized product placement and displays</li>
+               <li>Planned educational workshops for school tours</li>
+             </ul>
           </article>
 
           <article>
-            <h3><a href="http://mdc.edu">Miami Dade College </a></h3>
-              <h4>2010-2012</h4>
-              <h4>Associates Degree</h4>
-              <h4>Miami, FL</h4>
-          </article>
-      </section>
-
-      <section>
-        <h2 id="accomplishments">Accomplishments</h2>
-
-          <article>
-            <h3><a href="http://socialated.com"> Socialated</a></h3>
-              <h5>Social Media Marketing Intern</h5>
-              <h5>September 2013- January 2014</h5>
-              <h5>Coconut Grove, FL</h5>
+            <h3><a href="http://aeglive.com">AEG Live</a></h3>
+              <p>
+              Marketing Promotions Intern <br/>
+              March 2012- October 2012 <br/>
+              Denver, CO <br/>
+            </p>
           </article>
 
           <article>
             <ul>
-              <li>Managed three client profiles for social media platforms</li>
-              <li>Recruited two companies to the client database</li>
-              <li>Saved company 10 hours a week and $430 a month by organizing a client profile system with corresponding Dropbox files</li>
-              <li>Created banners and Google Ads for clients</li>
+              <li>Strategized promotion ideas with marketing team</li>
+              <li>Designed posters for concerts and sponsored events</li>
+              <li>Prepared ASCAP and attendance reports for events</li>
             </ul>
          </article>
-
-         <article>
-           <h3><a href="http://denverartmuseum.org">Denver Art Museum </a></h3>
-             <h5>Sales Assistant/Buying Assistant</h5>
-             <h5>October 2012- March 2013</h5>
-             <h5>Denver, CO</h5>
-         </article>
-
-         <article>
-           <ul>
-             <li>Inventoried exit gift shop for Becoming Van Gogh</li>
-             <li>Visualized product placement and displays</li>
-             <li>Planned educational workshops for school tours</li>
-           </ul>
-        </article>
-
-        <article>
-          <h3><a href="http://aeglive.com">AEG Live</a></h3>
-            <h5>Marketing Promotions Intern</h5>
-            <h5>March 2012- October 2012</h5>
-            <h5>Denver, CO</h5>
-        </article>
-
-        <article>
-          <ul>
-            <li>Strategized promotion ideas with marketing team</li>
-            <li>Designed posters for concerts and sponsored events</li>
-            <li>Prepared ASCAP and attendance reports for events</li>
-          </ul>
-       </article>
-    </section>
-
-    <section>
-      <h2 id="skills">Skills</h2>
-       <article>
-      <table>
-        <tr>
-          <th>Software</th>
-          <th>Level</th>
-        </tr>
-
-        <tr>
-          <td>Adobe Photoshop</td>
-          <td>Proficient</td>
-        </tr>
-
-        <tr>
-          <td>Adobe InDesign</td>
-          <td>Proficient</td>
-        </tr>
-
-        <tr>
-          <td>Adobe Illustrator</td>
-          <td>Novice</td>
-        </tr>
-
-        <tr>
-          <td>Google AdWords</td>
-          <td>Certified</td>
-        </tr>
-
-        <tr>
-          <td>Banner Snack</td>
-          <td>Novice</td>
-        </tr>
-      </table>
-      </article>
-    </section>
-
-      <section>
-        <h2 id="interests"> Interests </h2>
-
-          <article>
-            <h6>I am 4th generation Miami Beach, FL resident. I grew up within bicycling distance of South Beach. I have been making paper mache sculptures since I was 9 years old, I have only kept 4. Live music is my passion, I have attended over 300 concerts so far.</h6>
-          </article>
       </section>
 
+      <section id="skills">
+        <h2>Skills</h2>
+         <article>
+        <table>
+          <tr>
+            <th>Software</th>
+            <th>Level</th>
+          </tr>
+
+          <tr>
+            <td>Adobe Photoshop</td>
+            <td>Proficient</td>
+          </tr>
+
+          <tr>
+            <td>Adobe InDesign</td>
+            <td>Proficient</td>
+          </tr>
+
+          <tr>
+            <td>Adobe Illustrator</td>
+            <td>Novice</td>
+          </tr>
+
+          <tr>
+            <td>Google AdWords</td>
+            <td>Certified</td>
+          </tr>
+
+          <tr>
+            <td>Banner Snack</td>
+            <td>Novice</td>
+          </tr>
+        </table>
+        </article>
+      </section>
+    </div>
+
+    <div id="bottom-box">
+        <section id="interests">
+          <h2> Interests </h2>
+
+            <article>
+              <p>I am 4th generation Miami Beach, FL resident. I grew up within bicycling distance of South Beach. I have been making paper mache sculptures since I was 9 years old, I have only kept 4. Live music is my passion, I have attended over 300 concerts so far. </p>
+            </article>
+        </section>
+    </div>
+
     </main>
+  </div>
   </body>
 </html>
